5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1664_2970.log
== TEST (2019-04-16 11:23:31) 
-- CODE:
t = int(input("Quantidade de meses: ")

Qi = 1500.0
Qf = 1042000.0
 
x = Qf/Qi

i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 3
    Qi = 1500.0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:23:45) 
-- CODE:
t = int(input("Quantidade de meses: ")

Qi = (1500.0)
Qf = (1042000.0)
 
x = Qf/Qi

i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 3
    Qi = (1500.0)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:24:00) 
-- CODE:
t = int(input("Quantidade de meses: ")

Qi = "1500.0"
Qf = "1042000.0"
 
x = Qf/Qi

i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 3
    Qi = "1500.0"
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:24:22) 
-- CODE:
t = int(input("Quantidade de meses: ")

Qi = 1500
Qf = 1042000

x = Qf/Qi

i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 3
    Qi = 1500
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:24:56) 
-- CODE:
t = int(input("Quantidade de meses: ")

Qi = (1500)
Qf = (1042000)

x = Qf/Qi

i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 3
    Qi = (1500)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:25:07) 
-- CODE:
t = int(input("Quantidade de meses: ")

Qi = (1500*1)
Qf = (1042000*1)

x = Qf/Qi

i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 3
    Qi = (1500*1)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:25:30) 
-- CODE:
t = int(input("Quantidade de meses: ")

a = (1500*1)
b = (1042000*1)

x = b/a

i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 3
    a = (1500*1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:25:41) 
-- CODE:
t = int(input("Quantidade de meses: ")

a = 15001
b = 1042000

x = b/a

i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 3
    a = 15001
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:25:43) 
-- CODE:
t = int(input("Quantidade de meses: ")

a = 15001
b = 1042000

x = b/a

i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- EXECUTION TIME:
0.191588
-- ERROR:
  File "/home/codebench/codes/1664/2970/main.py", line 3
    a = 15001
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:25:44) 
-- CODE:
t = int(input("Quantidade de meses: ")

a = 15001
b = 1042000

x = b/a

i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 3
    a = 15001
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:26:05) 
-- CODE:
a = 1042000
b = 1500

t = int(input("Quantidade de meses: ")


x = b/a

i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 7
    x = b/a
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:26:23) 
-- CODE:
a = 1042000
b = 1500
x = a/b
t = int(input("Quantidade de meses: ")


i = ((x**(1/t)) - 1)

if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 7
    i = ((x**(1/t)) - 1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:27:20) 
-- CODE:
a = 1042000
b = 1500
x = a/b
i = ((x**(1/t)) - 1)
t = int(input("Quantidade de meses: ")


if (i(round, 5) <= 0.01)
	msg = "Real"
	print(msg)
else: 
	msg1 = "Irreal"
	print(msg1)
-- ERROR:
File "XXXX", line 9
    msg = "Real"
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:31:19) 
-- CODE:
t = int(input("Meses: "))

eq = (1042000/1500)
f = (((eq**1/t)) - 1)

if (f(round, 5) <= 0.01):
	msg = "Real"
	print(msg)
	
else:
	msg = "Irreal"
	print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (f(round, 5) <= 0.01):
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:32:22) 
-- CODE:
t = int(input("Meses: "))

eq = (1042000/1500)
f = (((eq**1/t)) - 1)

if (f(float((round, 5)) <= 0.01):
	msg = "Real"
	print(msg)
	
else:
	msg = "Irreal"
	print(msg)

-- ERROR:
File "XXXX", line 6
    if (f(float((round, 5)) <= 0.01):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:33:33) 
-- CODE:
t = int(input("Meses: "))

eq = (1042000/1500)
i(float) = (((eq**1/t)) - 1)

if (i(round(i, 5) <= 0.01)
	msg = "Real"
	print(msg)
	
else:
	msg = "Irreal"
	print(msg)

-- ERROR:
File "XXXX", line 7
    msg = "Real"
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:34:15) 
-- CODE:
t = int(input("Meses: "))

eq = (1042000/1500)
i(float) = (((eq**1/t)) - 1)

if (i(round(i, 5) <= 0.01)
msg = "Real"
	print(msg)
	
else:
msg = "Irreal"
	print(msg)

-- ERROR:
File "XXXX", line 7
    msg = "Real"
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:36:33) 
-- CODE:
t = int(input("Meses: "))

eq = (1042000/1500)**(1/t) - 1

print(round(eq, 5))

if (eq <= 0.01):
	print("Real")
else:
	print("Irreal")


-- OUTPUT:
0.00999
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:36:39) 
-- CODE:
t = int(input("Meses: "))

eq = (1042000/1500)**(1/t) - 1

print(round(eq, 5))

if (eq <= 0.01):
	print("Real")
else:
	print("Irreal")


-- EXECUTION TIME:
0.147017
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
Irreal
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
